<resources>
    <string name="app_name">Vehicle Tracking</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_owner_add">Novo proprietario</string>
    <string name="title_activity_owner_details">Detalhes do proprietario</string>
    <string name="title_activity_vehicle_show">Veiculos</string>
    <string name="title_activity_vehicle_add">Novo Veiculo</string>
    <string name="title_activity_vehicle_details">Detalhes</string>
    <string name="title_activity_teste">TesteActivity</string>
    <string name="title_activity_account_confirm">Confirmar a sua conta</string>
    <string name="title_activity_password_reset">Definir nova palavra passe</string>
    <string name="title_activity_user_create">Registar-se</string>
    <string name="title_activity_first_user_sync">Assistente de configuração</string>
    <string name="title_activity_map">Localização do veículo</string>
    <string name="title_activity_vehicle_state">Estado do veículo</string>
    <string name="title_activity_VehicleAlarmImage">Foto recebida</string>

    <string name="invalid_user_contact">Contacto informado é inválido</string>
    <string name="invalid_user">Utilizador ou palavra passe é inválido</string>
    <string name="user_not_authorized">Esta conta não está autorizada a aceder ao sistema, por favor contactar a InSystems, Lda.</string>
    <string name="error_during_sync">Ocorreu um erro durante a sincronização, por favor contacte o provedor de serviço para suporte.</string>
    <string name="required_filds_not_filled">Todos os campos devem ser preenchidos!</string>


    <!-- ACTIVITY OWNER DERTAILS STRING -->
    <string name="owd_name">Nome:</string>
    <string name="owd_surname">Apelido:</string>
    <string name="owd_email">Email:</string>
    <string name="owd_contact">Contacto:</string>
    <string name="owd_nrOfVechicles">Nr de Veiculos:</string>
    <string name="owd_type">Categoria:</string>

    <!-- ACTIVITY VEHICLE ADD -->
    <string name="vadd_make">Marca</string>
    <string name="vadd_model">Modelo</string>
    <string name="vadd_nrPlate">Matricula</string>
    <string name="vadd_IMEI">IMEI</string>
    <string name="vadd_owner">Propietario</string>
    <string name="vadd_callNumber">Numero do rastreador</string>
    <string name="vadd_type">Tipo de veiculo</string>
    <string name="vadd_package">Pacote</string>

    <!-- VEHICLE LIST-->
    <string name="vehicle_show_botao_adicionar">Adicionar</string>
    <string name="vehicle_show_botao_pesquisar">Pesquisar</string>
    <string name="vehicle_disabled">O sistema está desactivado neste veículo, contacte a InSystems, Lda!</string>
    <string name="vehicle_data_sync_in_progress">Sincronizando dados, por favor aguarde...</string>
    <string name="vehicle_list_empty">Nenhum veículo foi encontrado!</string>


    <!-- Vehicle ADD Menu -->
    <string name="vehicle_add_botao_adicionar">Terminar</string>
    <string name="vehicle_add_botao_cancelar">Cancelar</string>
    <string name="title_activity_owner_search">Pesquisa de proprietario</string>

    <!-- Owner ADD Menu -->
    <string name="owner_add_botao_adicionar">Terminar</string>
    <string name="owner_add_botao_cancelar">Cancelar</string>

    <!-- LOGIN -->
    <string name="login_app_name">INSYSTEMS VEHICLE TRACKING</string>
    <string name="login_contact">Telefone</string>
    <string name="login_password">Palavra-passe</string>
    <string name="login_enter">INICIAR SESSÃO</string>
    <string name="login_register">Registar-se no InSystems Vehicle Tracking</string>
    <string name="user_forgot_password">Esqueceu-se da palavra passe?</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>


    <string name="drawer_open">Painel aberto</string>
    <string name="drawer_close">Painel fechado</string>

    <!-- USER PASSWORD RESET -->
    <string name="password_reset_main_text">Criar uma palavra passe nova</string>
    <string name="password_reset_sub_text">Vais usar esta palavra passe para aceder a sua conta</string>
    <string name="password_reset_hint">Palavra passe nova</string>
    <string name="password_reset_submit">CONTINUAR</string>
    <string name="account_confirm_cancel">CANCELAR</string>
    <string name="account_confirm_text">Vamos enviar-te um código para confirmar que a conta é sua</string>
    <string name="account_confirm_code_request">ENVIAR NOVAMENTE</string>
    <string name="account_confirm_code_hint">Itroduza o código</string>
    <string name="account_confirm_code_sub_text">Enviamos um email para este endereço. Insere aqui o código dessa mensagem.</string>

    <!-- FIRST SYNC -->
    <string name="first_sync_label">Bem vindo ao assistente de configuração inicial do InSystems Vehicle Tracking, Para continuar intruduza o seu contacto:</string>
    <string name="first_sync_contact">Introduza o seu contacto</string>
    <string name="first_sync_submit">CONTINUAR</string>
    <string name="first_sync_cancel">CANCELAR</string>
    <string name="first_sync_in_progress">Sincronizando dados do utilizador...</string>


    <!-- LOGIN -->
    <string name="user_create_user_text">Informe os seus dados para o registo no sistema móvel de rastreio.</string>
    <string name="user_create_user">Nome e apelido</string>
    <string name="user_create_contact">Contacto telefónico</string>
    <string name="user_create_password">Palavra passe</string>
    <string name="user_create_password_confirm">Confirme a palavra passe</string>
    <string name="user_create_email">Email</string>
    <string name="user_create_save">Gravar</string>
    <string name="user_authentication_in_progress">Autenticando dados...</string>

    <!-- VEHICLE DETAILS -->
    <string name="command_in_progress">Comando em execução...</string>
    <string name="vehicle_owner_name">Proprietário</string>
    <string name="vehicle_num_plate">Matricula</string>
    <string name="vehicle_imei">IMEI</string>

    <!-- NOTIFICATION -->
    <string name="notification_locate_vehicle">VER MAPA</string>
    <string name="notification_close">Fechar</string>
    <string name="notification_vehicle_state">VER ESTADO</string>
    <string name="notification_vehicle_image">VER Foto</string>
    <string name="location_not_set">A notificação não possuí a localização do veículo</string>

    <!-- PERMISSION NOTIFICATION -->
    <string name="call_permission_denied">Permissao para efectuar chamada recusada</string>
    <string name="send_sms_permission_denied">Permissao para enviar SMS recusada</string>
    <string name="receive_sms_permission_denied">Permissao para receber SMS recusada</string>
    <string name="read_sms_permission_denied">Permissao para ler SMS recusada</string>
    <string name="internet_permission_denied">Permissao para verificar estado da Internet recusada</string>
    <string name="network_state_permission_denied">Permissao para estado da rede recusada</string>
    <string name="phone_state_permission_denied">Permissao para verificar estado do telemovel recusada</string>
    <string name="read_gservices_permission_denied">Permissao para usar servicos Google recusada</string>
    <string name="write_external_storage_permission_denied">Permissao para usar memoria externa recusada</string>
    <string name="title_activity_vehicle_command">VehicleCommand</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="action_logout">Logout</string>

    <!--Command Dialog string-->
    <string name="action_command_send">ENVIAR</string>
    <string name="action_command_cancel">CANCELAR</string>
    <string name="device_not_supported">Dispositivo nao suportado!</string>
    <string name="my_location">Minha localizacao</string>
    <string name="fine_location_permission_denied">Permissao para aceder a sua corrente localizacao recusada.</string>
    <string name="definicoes_gps">Definicoes de GPS</string>
    <string name="gps_not_activated">GPS nao esta activo, gostaria de ir as definicoes para activar?</string>
    <string name="gps_settings">Definicoes</string>
    <string name="cancel">Cancelar</string>
    <string name="title_activity_vehicle_drawer">VehicleDrawer</string>

    <string name="action_example">Example action</string>
    <string name="menu_extra_item_section">Extras</string>
    <string name="menu_admin_item_section">Administrador</string>
    <string name="menu_basic_item_section">Opcoes gerais</string>
    <string name="minimun_pass_length">A senha deve ser composta por seis (6) digitos numericos. Por favor tente novamente.</string>
    <string name="about_text">
        Os logotipos InSystems sao marcas comerciais da InSystems.Lda. Todos os direitos reservados.
    </string>
    <string name="about_licence">
        InSystems Vehicle Tracking para Android foi concebida com software de fonte livre.
    </string>
    <string name="about_app_name">INSYSTEMS VEHICLE TRACKING</string>
    <string name="about_app_year">2013-2016</string>


</resources>
