<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/login_background"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".activities.AccountConfirmRequest">

    <TextView
        android:id="@+id/textView2"
        style="@style/login_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/account_confirm_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="#e7f2f7">


        <EditText
            android:id="@+id/account_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account_confirm_code_hint"
            android:background="@drawable/edit_text_bottom_border"
            android:ems="20"
            android:layout_marginTop="20dp"
            style="@style/login_edit_text"
            android:inputType="phone" >

            <requestFocus />

        </EditText>



    </LinearLayout>

    <Button
        android:id="@+id/account_confirm_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_reset_submit"
        android:layout_marginTop="30dp"
        android:background="@drawable/login_button_shape"
        android:textColor="@drawable/button_text_color"
        style="@style/login_button"/>

    <Button
        android:id="@+id/account_confirm_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_confirm_cancel"
        android:layout_marginTop="30dp"
        android:background="@drawable/login_button_shape"
        android:textColor="@drawable/button_text_color"
        style="@style/login_button"/>

</LinearLayout>