<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mz.co.insystems.trackingservice.activities.About">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@color/login_background">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginTop="60dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher"
            />

        <TextView
            android:id="@+id/application_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            style="@style/login_textView"
            android:text="@string/about_app_name" />

        <TextView
            android:id="@+id/application_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="5dp"
            style="@style/login_textView"
            android:text="@string/about_app_name" />

        <TextView
            android:id="@+id/textView2"
            style="@style/login_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="35dp"
            android:text="@string/about_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView3"
            style="@style/login_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="35dp"
            android:text="@string/about_licence"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/about_years"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            style="@style/login_textView"
            android:text="@string/about_app_year" />

        </LinearLayout>

</RelativeLayout>
