<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:orientation="vertical"

        android:background="@color/vehicle_details_background">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            >
            <ImageView
                android:id="@+id/imageVehicle_details"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                android:minHeight="300dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:src="@mipmap/ic_launcher"
                android:adjustViewBounds="true"
                />

            <TextView
                android:id="@+id/textMake_model_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                android:padding="7dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                style="@style/vehicle_details_make_model"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/vehicle_details" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/vehicle_show_image1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="30dp"
                    android:maxHeight="50dp"
                    android:minHeight="50dp"
                    android:src="@mipmap/ic_action_person" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    >

                    <TextView
                        android:id="@+id/textOwner_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="5dp"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        style="@style/vehicle_details_main_item"/>

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/textOwner_details"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/textOwner_details"
                        android:text="@string/vehicle_owner_name"
                        android:layout_marginTop="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        style="@style/vehicle_details_secondary_item"/>

                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="3dp"
            android:background="@drawable/vehicle_details" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/vehicle_show_image2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="30dp"
                    android:maxHeight="50dp"
                    android:minHeight="50dp"
                    android:src="@mipmap/car_109" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    >

                    <TextView
                        android:id="@+id/textNr_plate_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="5dp"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        style="@style/vehicle_details_main_item"/>

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/textNr_plate_details"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/textNr_plate_details"
                        android:text="@string/vehicle_num_plate"
                        android:layout_marginTop="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        style="@style/vehicle_details_secondary_item"/>

                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="3dp"
            android:background="@drawable/vehicle_details" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/vehicle_show_image3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="30dp"
                    android:maxHeight="50dp"
                    android:minHeight="50dp"
                    android:src="@mipmap/ic_action_location_searching" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    >

                    <TextView
                        android:id="@+id/textIMEI_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="5dp"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        style="@style/vehicle_details_main_item"/>

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/textIMEI_details"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/textIMEI_details"
                        android:text="@string/vehicle_imei"
                        android:layout_marginTop="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        style="@style/vehicle_details_secondary_item"/>

                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>



    </LinearLayout>




</ScrollView>
